{
    "name": "inputProvider",
    "maps": [
        {
            "name": "CM FreeLook1 Camera Controls",
            "id": "9cb414fb-d900-491b-9f7a-25b7f22cd4c0",
            "actions": [
                {
                    "name": "MouseLook",
                    "type": "PassThrough",
                    "id": "ec1879e0-9a09-4d1c-a134-780de3b9e65c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "cfd3cfe5-c748-4dc2-b7cc-2addb04d81ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse Zoom",
                    "type": "PassThrough",
                    "id": "bea21fbc-87da-400a-80ba-ef866a9f5501",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0aa2352a-bd78-46c1-a7ad-dced20e270be",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4943ac1a-e26f-4697-ab8a-c26964a8e22f",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7fce38b-ece5-4268-988e-442f395c6939",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Controls",
            "id": "ac896747-400b-4745-8d17-728e202c73cc",
            "actions": [
                {
                    "name": "Movement Z Axis",
                    "type": "Button",
                    "id": "058d9d8c-6c0e-44c4-b0d7-939f6dca770e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotation Y Axis",
                    "type": "Button",
                    "id": "562c2c7a-ebdf-408d-974f-2af70d63c096",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement X Axis",
                    "type": "Button",
                    "id": "83a18bb5-c9e8-4abf-a6d6-1274dfa1a3f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "f4493c46-36ee-45be-b0c3-cd777a2ed82d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement Z Axis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "cf899409-fa31-4143-ac7a-fcf6406beace",
                    "path": "<Keyboard>/#(S)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement Z Axis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "386b8122-05e3-4e91-be9a-fe6728579d7f",
                    "path": "<Keyboard>/#(W)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement Z Axis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "30bd7f33-c27e-4d65-9ade-a2cb4b10d8a2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation Y Axis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "8192ec6f-5ae4-43ef-8e74-33a96c1d3bbe",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation Y Axis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7e6a33d5-4667-4ba6-8c75-5e82e7886962",
                    "path": "<Keyboard>/rightShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation Y Axis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4d93f186-4901-4a56-8dab-cb5dea13b4f7",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement X Axis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "497f475b-5486-444b-9f1f-91a5c8bf3e90",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement X Axis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "602efd89-1037-4099-a8ed-cf8977ce7380",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement X Axis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f8066a61-816e-46a4-b5a4-90427aeb8a9b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement X Axis",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Gameplay Movement",
            "id": "87e7712f-f47c-4051-ac16-689fd44f25fa",
            "actions": [
                {
                    "name": "Acceleration",
                    "type": "Button",
                    "id": "3dcd2951-8924-455d-8dbb-36d81af852e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SteeringAngle",
                    "type": "Value",
                    "id": "f9fbdbd3-5db5-4cd6-9dfa-ad68b8377c6b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HandBrake",
                    "type": "Button",
                    "id": "f4d2325d-52d6-42f9-bd03-0380fefb5916",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6606b511-bfa0-4e29-9a8d-54844d808d4a",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Acceleration",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "67b4fa09-56aa-4f28-87fc-2d7417852534",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Acceleration",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "53876e76-6bd6-4d5a-8851-2374a82582fd",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Acceleration",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e508006b-74a9-41ee-81cb-d470f58d42e6",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Acceleration",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9a712f0a-1090-48a1-a4ad-4d902e111edf",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SteeringAngle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "a0edfb64-3155-41c4-be51-b34aefdda433",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SteeringAngle",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "bd4e5817-2484-4c50-befd-bfa71d3112d3",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SteeringAngle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8a3d8a1f-0fae-46f3-b26c-a54825b1ac80",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SteeringAngle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "52d4900c-accd-4e35-8cd6-c9b746faf273",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandBrake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dab20608-8218-48d9-b2d0-a868bcd6ac0b",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandBrake",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "inputProvider",
            "bindingGroup": "inputProvider",
            "devices": []
        }
    ]
}